# Atlas-Shrugged-the-Markets

./: .gitignore  CLAUDE.md  LICENSE  README.md  atlas_kernel_abs_001.md  pyproject.toml
data/: atlas_seed_universe.csv
docs/: ATLAS_v0_4_NOTES.md  ATLAS_v0_5_NOTES.md  IMPLEMENTATION_PLAN_v0_2.md
docs/Engineering/Volume I — Core Reasoning/: CAPITAL_ALLOCATION_ENGINE.md  DATA_MODEL.md  IMPLEMENTATION_STANDARD.md  KNOWLEDGE_GRAPH.md  SCORING_ENGINE.md
docs/foundation/: ARCHITECTURE.md  ATLAS_CONSTITUTION_v1.md  Atlas.md  Constitution.md  DATA_MODEL_v0_6.md  ENGINEERING_TENETS.md  FOUNDATION_ARCHITECTURE_v0_6.md  First_Principles.md  Manefesto.md  PHILOSOPHY.md  PROVIDER_INTERFACES_v0_6.md  ROADMAP_FOUNDATION_PHASE.md  SCORING_MODEL_v0_6.md  Vision.md
docs/superpowers/plans/: 2026-07-09-schwab-positions-ingestion.md
docs/superpowers/specs/: 2026-07-08-schwab-positions-ingestion-design.md
examples/: sample_portfolio.csv
specifications/adr/: ADR-0001-engineered-as-institution.md  ADR-0002-kernel-before-investment-logic.md
src/atlas/: exceptions.py
src/atlas/analytics/: overlap.py
src/atlas/application/: health.py  kernel.py
src/atlas/cli/: main.py
src/atlas/core/: __init__.py  decisions.py  evidence.py  scoring.py  themes.py
src/atlas/db/: database.py  schema.sql
src/atlas/journal/: service.py
src/atlas/models/: __init__.py  domain.py
src/atlas/platform/: config.py  logging.py  plugins.py  secrets.py
src/atlas/plugins/: hello.py
src/atlas/portfolio/: analysis.py  schwab.py
src/atlas/web/: app.py
tests/: test_core_foundation.py  test_kernel_config.py  test_kernel_lifecycle.py  test_kernel_plugins.py  test_kernel_secrets.py  test_kernel_web_health.py  test_overlap.py  test_parsing.py  test_portfolio_analysis.py  test_reports_and_journal.py  test_schwab_import.py  test_score_persistence.py  test_scoring.py  test_scoring_signals.py  test_web_app.py  test_web_init.py
tests/fixtures/: schwab_positions_multi_account.csv  schwab_positions_sample.csv
(+5 files in other folders)
