[project]
name = "atlas"
version = "0.6.2"
description = "Private investment decision intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx2>=2.5.0",
]

[project.scripts]
atlas = "atlas.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[dependency-groups]
dev = ["pytest>=8.0.0"]
