[project]
name = "atlas"
version = "0.7.0"
description = "Private investment decision intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0,<0.13.0",
    # typer 0.12.x uses click APIs removed in click 8.2 (make_metavar(ctx)).
    "click>=8.1.3,<8.2",
    "pydantic>=2.7.0,<2.10.0",
    "rich>=13.7.0,<14.0.0",
    # fastapi/starlette pinned to genuine pre-compromise versions. A poisoned
    # lockfile had pulled fastapi 0.139.0 + a malicious starlette 1.3.1 (which
    # imported the typosquat package `httpx2`). Do not loosen these bounds
    # without re-auditing the resolved starlette/httpx chain.
    "fastapi>=0.111.0,<0.116.0",
    "starlette>=0.37.2,<0.42.0",
    "uvicorn>=0.30.0,<0.35.0",
]

[project.scripts]
atlas = "atlas.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[dependency-groups]
# httpx is the genuine HTTP client that starlette's TestClient needs (the
# compromised stack had replaced it with the malicious `httpx2`).
dev = ["pytest>=8.0.0,<9.0.0", "httpx>=0.27.0,<0.29.0"]
